[gd_scene load_steps=5 format=3 uid="uid://drbfy20lnxnl0"]

[ext_resource type="Script" uid="uid://xy85b8xbi3ak" path="res://ui/menu_config/menu_config.gd" id="1_7wffm"]
[ext_resource type="PackedScene" uid="uid://c8lapfbcseu04" path="res://ui/menu_config/input_button.tscn" id="1_ndumg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7wffm"]
bg_color = Color(0.449031, 0.660738, 0.112868, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c8v1g"]
bg_color = Color(0.154852, 0.318792, 0.00717196, 1)

[node name="InputSettings" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7wffm")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 130.0
offset_top = 106.0
offset_right = -130.0
offset_bottom = -106.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Reset settings"

[node name="TextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Search for action..."

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="InputButton" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("1_ndumg")]
layout_mode = 2

[node name="InputButton2" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("1_ndumg")]
layout_mode = 2

[node name="InputButton3" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("1_ndumg")]
layout_mode = 2

[node name="InputButton4" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("1_ndumg")]
layout_mode = 2

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_7wffm")
theme_override_styles/normal = SubResource("StyleBoxFlat_c8v1g")
text = "Save and close"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
